[gd_scene load_steps=4 format=3 uid="uid://bn0pesdjmr4ve"]

[ext_resource type="Script" path="res://scripts/rocket.gd" id="1_iex2h"]
[ext_resource type="Texture2D" uid="uid://dlge74k3n8bkx" path="res://assets/textures/rocket.png" id="1_vqd27"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kwndc"]
radius = 10.2986
height = 39.2772

[node name="rocket" type="Area2D"]
collision_layer = 4
script = ExtResource("1_iex2h")
speed = 650

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.19209e-07, 1.19209e-07)
scale = Vector2(0.47619, 0.563988)
texture = ExtResource("1_vqd27")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2.81592, -0.509201)
shape = SubResource("CapsuleShape2D_kwndc")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9, 0)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
